--- a/requirements.txt
+++ b/requirements.txt
@@ -166,7 +166,7 @@ itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
 jax==0.4.10
 jdcal @ file:///Users/ktietz/demo/mc3/conda-bld/jdcal_1630584345063/work
 jedi @ file:///C:/ci/jedi_1611341083684/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
+Jinja2==3.1.2
 jinja2-time @ file:///tmp/build/80754af9/jinja2-time_1617751524098/work
 jmespath @ file:///home/conda/feedstock_root/build_artifacts/jmespath_1655568249366/work
 joblib==1.3.2
@@ -198,7 +198,7 @@ llvmlite==0.37.0
 locket==0.2.1
 lxml==4.9.3
 Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1657921053229/work
-MarkupSafe @ file:///C:/ci/markupsafe_1607027406824/work
+MarkupSafe==2.1.5
 matplotlib==3.7.2
 matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
 mccabe==0.6.1
